--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
     <p class="mainp">Facebook helps you connect and share with the people in your life.</p>    
     </div>
     <div class="secdiv">
+        <form action="#">
         <input type="text" placeholder="Email address or phone number" required>
         <br>
         <input type="password" placeholder="Password" required>
+        </form>
         <br>
         <button class="btn1">Log in</button>
         <a href="" class="maina">Forgotten password?</a>
